Fix nav scope spacing

--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -307,17 +307,17 @@ nav {
         box-shadow: 0px 6px 15px -3px rgba(0,0,0,0.2);
 
         &.learn-scope {
-            left: -215px;
+            left: -227px;
             width: 570px;
             height: 480px;
         }
         &.tanzutv-scope {
-            left: 101px;
+            left: 87px;
             width: 296px;
             height: 320px;
         }
         &.community-scope {
-            left: 251px;            
+            left: 237px;            
             width: 150px;
             height: 136px;
         }
